Update: Multiple candidates for topic influence

--- a/config.json
+++ b/config.json
@@ -5,6 +5,9 @@
         "access_token": "420400261-Qknhgi9XaPv1ZklKdV68Ef4ZzbmjyPTFKynzW2WR",
         "access_token_secret": "B077y0aYdHAntBR0GKB84xHqkofTW2a99qb42iptprDwE"
     },
+    "topicModeling": {
+        "num_topics": 10
+    },
     "elasticsearch": {
         "host": "localhost",
         "port": 9200,
