--- a/config.json
+++ b/config.json
@@ -5,8 +5,14 @@
         "access_token": "420400261-Qknhgi9XaPv1ZklKdV68Ef4ZzbmjyPTFKynzW2WR",
         "access_token_secret": "B077y0aYdHAntBR0GKB84xHqkofTW2a99qb42iptprDwE"
     },
-    "topicModeling": {
-        "num_topics": 10
+    "twitterFetch": {
+        "max_followers": 15,
+        "max_tweets": 10,
+        "max_follower_friends": 5
+    },
+    "topic_modeling": {
+        "num_topics": 10,
+        "model_name": "ldamodel.pickle"
     },
     "elasticsearch": {
         "host": "localhost",
